/*
 * Copyright 2016-present the original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package api.center.auth;

import "api/common/base.proto";
import "api/common/enums.proto";
import "api/common/r.proto";

// 配置相关
option java_package = "com.aiforest.tmmes.api.center.auth";
option java_outer_classname = "UserLoginProto";
option objc_class_prefix = "Auth";
option java_multiple_files = true;

// 接口类
service UserLoginApi {
  rpc selectByName (NameQuery) returns (RUserLoginDTO);
}

// selectByName Query
message NameQuery {
  string name = 1;
}

// R of UserLogin DTO
message RUserLoginDTO {
  api.common.RDTO result = 1; // 结果
  UserLoginDTO data = 2; // 数据
}

// UserLogin DTO
message UserLoginDTO {
  api.common.BaseDTO base = 1; // 基础
  string login_name = 2; // 登录名称
  string user_id = 3; // 用户ID
  string user_password_id = 4; // 用户密码ID
  api.common.EnableFlagDTOEnum enable_flag = 5; // 使能标识
}